--- a/style.css
+++ b/style.css
@@ -22,15 +22,8 @@ input, button {
     padding: 20px;
 }
 
-.dog-card {
-    border: 1px solid #7d7979;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-}
 
-.dog-card img {
-    max-width: 100%;
-    border-radius: 5px;
+img {
+    width: 200px;
+    margin: 10px;
 }
